# ostle-ai-battle

./: README.md  pyproject.toml
src/ostle/agents/: base.py  kyawan.py  kyawan2.py  kyawan3.py  random.py
src/ostle/agents/Aram_agent/: Aram.py
src/ostle/agents/inoue_agent/: agent.py  agent2.py  agent3.py  train_dqn.py
src/ostle/agents/inoue_agent/artifacts/: dqn_strongest.pt
src/ostle/app/: battle_human.py  benchmark.py  engine.py  main.py  window.py
src/ostle/battle/: battle_human.py  battle_window.py
src/ostle/core/: board.py
tests/: test_board.py
